2012-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-get-headers): Update regexp.

2012-02-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	Remove marks feature, following Ma Gnus.

	* nnshimbun.el: Don't declare server-marks.
	(nnshimbun-marks-is-evil, nnshimbun-marks-file-name)
	(nnshimbun-marks, nnshimbun-marks-modtime): Remove.
	(nnshimbun-request-set-mark, nnshimbun-marks-changed-p)
	(nnshimbun-request-update-info, nnshimbun-possibly-create-directory)
	(nnshimbun-save-marks, nnshimbun-open-marks): Remove.

2012-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-switch-to-buffer): Abolish.
	* nnshimbun.el (nnshimbun-generate-download-script): Revert to using
	switch-to-buffer.

2012-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-index-url): Update url for blog-en.
	(shimbun-get-headers): Retrieve indices, going back to past months, for
	blog-en group; improve regexp matching blog-ja headers.
	(shimbun-clear-contents): Use blog-ja filter also for blog-en.

2011-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-get-headers): Update regexp; don't miss revised
	articles.

2011-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-xml-parse-buffer): Silence XEmacs's byte compiler.

2011-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-get-headers): Improve regexp for blog-ja.

2011-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-index-url): Update url for blog-ja.
	(shimbun-get-headers): Retrieve indices, going back to past months, for
	blog-ja group.
	(shimbun-clear-contents): Add a filter for blog-ja group.

2011-11-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Rewrite.

2011-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo-auctions.el (shimbun-index-url): Revert last change.

2011-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-url-coding-system): Abolish.
